--- a/notes.html
+++ b/notes.html
@@ -1,3 +1,11 @@
+<!-- *******IT'S ALL ABOUT COMPONENTS, STATES AND PROPS, and remember that a render can only essentially display 1 parent element, if we want to render multiple parent elements, they have to be wrapped in a div. Remember to use ".bind(this)" when passing functions or methods around. Whenever we're binding a value, we'll also set up a change listener for that, so that it actually changes when the value changes. Also, css-like design elements with hyphens are camelCase in React JSX and should be made into a component, and then implemented, in order for them to function.*******
+******FLUX is a pattern. CADS, Components, Actions, Dispatcher, Stores and it cycles again.******
+******Remember, when listening to events on mount, to also unmount them to prevent memory leaks.******
+
+
+
+
+
 <!-- quickstart 
 
 npm init -y       This is for initializing a package.json
@@ -5,4 +13,6 @@ npm init -y       This is for initializing a package.json
 npm i -S react react-dom      This is for npm-install --saving react and reactDOM
 
 npm i -D babel-core babel-loader babel-preset-es2015 babel-preset-react react-hot-loader webpack webpack-dev-server       This is for npm installing dependencies
+
+npm i -g webpack webpack-dev-server      This is to install these globally
 
