--- a/notes.html
+++ b/notes.html
@@ -16,3 +16,4 @@ npm i -D babel-core babel-loader babel-preset-es2015 babel-preset-react react-ho
 
 npm i -g webpack webpack-dev-server      This is to install these globally
 
+also might need to install lodash globally even before these
