--- a/notes.html
+++ b/notes.html
@@ -17,3 +17,5 @@ npm i -D babel-core babel-loader babel-preset-es2015 babel-preset-react react-ho
 npm i -g webpack webpack-dev-server      This is to install these globally
 
 also might need to install lodash globally even before these
+
+also to see the actual results, you actually might need to visit http://localhost:8080/webpack-dev-server/bundle
